
Changelog for 1.5.12
* Fix depreciation method listing incorrect stored procedure (Erik H)
* Fix failure to select business type details from business list (Erik H, #3154)
* Require fixed asset values needed in depreciation to be entered (Erik H)
* Fix the Net Book Value report listing assets by the wrong class (Erik H)
* Fix the Net Book Value report incorrectly excluding some assets (Erik H)

Erik H is Erik Huelsmann


Changelog for 1.5.11
* Rename lighttpd example configuration file for consistency (Yves L)
* Fix Net Book Value report shows 'LedgerSMB::Report' as its name (Erik H, #3132)
* Fix Depreciation screen not showing any assets (Erik H, #3131)
* Fix fixed asset's 'Usable life' field not showing entered value (Erik H, #3130)
* Fix Net Book Value report's link to asset details broken (Erik H, #3129)
* Ensure forked sub-processes to be correctly terminated (Erik H)
* Fix Form submission sometimes seems to hang (Erik H, #2972)
* Fix missing content in columns of the outstanding report (Erik H, #2585)
* Fix contacts search ignores e-mail and phone filters (Erik H, #2821)
* Fix contacts search by address data doesn't work (Erik H, #2490)

Yves L is Yves Lavoie
Erik H is Erik Huelsmann


Changelog for 1.5.10
* Fix loading image URL taken from Dojo 1.12 (instead of 1.10) (Erik H)
* Fix mails being sent with non-unique Message-IDs (Erik H, #3041)
* Round-trip fewer values over web requests during migration (Erik H)
* Migrate accounting <-> invoice relationship from LSMB 1.2/SL (Erik H/Yves L)
* Fix 500 ISE on bottom of order when creating from vendor (Erik H, #3057)
* Contact info now properly HTML-escaped (Erik H, #2820)
* Add check for cr_coa_to_account primary key to 1.3 migration (Erik H, #2663)
* Add work-around to PGOld for PGObject::Simple 2.x incompatibility (Chris T)
* Fix missing asset classes on Depreciate and Disposal screens (Erik H, #3123)

Erik H is Erik Huelsmann
Yves L is Yves Lavoie
Chris T is Chris Travers


Changelog for 1.5.9